Fix behavior on unloaded sites

- show url
- reload with f5

BUG:319924
BUG:312928